--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body onscroll="landingPageScroll()">
-    <section class=" mobileNavs">
+    <section class=" mobileNavs w-100">
         <nav class="mobileNav w-100">
             <div class="d-flex gap-1 align-items-center justify-content-center">
-                <button class="btn text-black">
+                <button class="btn text-light">
                     <i class="fa fa-bars"></i>
                 </button>
                 <div style="color:rgb(72, 16, 156); font-family: cursive; font-weight: bold;">Special</div>
             </div>
             <div class="d-flex gap-1 align-items-center justify-content-center">
-                <button class="btn text-black">
+                <button class="btn text-light">
                     <i class="fa fa-home"></i>
                 </button>
-                <button class="btn text-black">
+                <button class="btn text-light">
                     <i class="fa fa-shopping-cart"></i>
                 </button>
             </div>
@@ -33,24 +33,26 @@
             </div>
             <button class=" rounded-end "><i class="fa fa-search"></i></button>
         </div>
-        <div class="shadow shadow-lg  w-100 d-flex justify-content-between" style="padding: 0px;">
-            <button class="btn"><i class="fa fa-chart-simple"></i><br>
+
+        <div class="shadow iconNav shadow-lg  w-100 d-flex justify-content-between" style="padding: 0px;">
+            <button class="btn text-light"><i class="fa fa-chart-simple"></i><br>
                 <span style="font-size: 12px;">Browse All</span>
             </button>
-            <button class="btn"><i class="fa fa-tshirt"></i><br>
+            <button class="btn text-light"><i class="fa fa-tshirt"></i><br>
                 <span style="font-size: 12px;">Fashion</span>
             </button>
-            <button class="btn"><i class="fa fa-desktop"></i><br>
+            <button class="btn text-light"><i class="fa fa-desktop"></i><br>
                 <span style="font-size: 12px;">Computers</span>
             </button>
-            <button class="btn"><i class="fa fa-mobile-android"></i><br>
+            <button class="btn text-light"><i class="fa fa-mobile-android"></i><br>
                 <span style="font-size: 12px;">Phones</span>
             </button>
-            <button class="btn"><i class="fa fa-tag"></i><br>
+            <button class="btn text-light"><i class="fa fa-tag"></i><br>
                 <span style="font-size: 12px;">All Deals</span>
             </button>
         </div>
     </section>
+    
     <section style="top: -400px;" class="navSection" id="navSection">
         <header class="nav-header position-relative" id="navHeader">
             <h3>Free Delivery <span class="fw-light">On Orders From </span>₦4,599 & Above</h3>
