added some features

--- a/index.html
+++ b/index.html
@@ -464,7 +464,13 @@
         </div>
     </section>
 
-    <div></div>
+    <div class="w-100  adsContainer">
+        <img src="./e-asset/ads.webp" class="w-100 rounded rounded-3 col-12 mb-4" alt="" >
+        <div class="d-md-flex d-sm-flex d-lg-flex gap-3">
+            <img src="./e-asset/ads2.jpg" class="w-100 rounded  mb-3 rounded-3" alt="">
+            <img src="./e-asset/ads3.jpg" alt="" class="w-100 rounded rounded-3">
+        </div>
+    </div>
 
     <script src="./commerce.js"></script>
     <script src="./all.js"></script>
