--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <button class="btn text-light">
                     <i class="fa fa-bars"></i>
                 </button>
-                <div style="color:rgb(72, 16, 156); font-family: cursive; font-weight: bold;">Special</div>
+                <div style="color:white; font-family: cursive; font-weight: bold;">Special</div>
             </div>
             <div class="d-flex gap-1 align-items-center justify-content-center">
                 <button class="btn text-light">
@@ -465,12 +465,51 @@
     </section>
 
     <div class="w-100  adsContainer">
-        <img src="./e-asset/ads.webp" class="w-100 rounded rounded-3 col-12 mb-4" alt="" >
-        <div class="d-md-flex d-sm-flex d-lg-flex gap-3">
-            <img src="./e-asset/ads2.jpg" class="w-100 rounded  mb-3 rounded-3" alt="">
-            <img src="./e-asset/ads3.jpg" alt="" class="w-100 rounded rounded-3">
+        <img src="./e-asset/ads.webp" class="w-100 rounded ads1img1 rounded-3 col-12 mb-4" alt="" >
+        <img src="./e-asset/adsmb.jpg" alt="" class="w-100 rounded ads1img2 rounded-3 col-12 mb-4">
+        <div class="ads2Con">
+            <img src="./e-asset/ads2.jpg" class="rounded mb-3 rounded-3" alt="">
+            <img src="./e-asset/ads3.jpg" alt="" class=" rounded rounded-3">
         </div>
     </div>
+
+    <section class="sec4">
+        <div class="card">
+            <img src="./e-asset/shopmore1.webp" class="card-img-top" alt="...">
+            <div class="card-body displa">
+              <h5 class="card-title">HOME FURNISHING</h5>
+              <p class="card-text">Get Up To 70% Off</p>
+              <a href="#" class="mt-auto">SHOP NOW <i class="fa fa-angle-right"></i></a>
+            </div>
+          </div>
+
+           <div class="card">
+            <img src="./e-asset/shopmore2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">FITNESS TOOLS AND EQUIPMENT</h5>
+              <p class="card-text">Get Fitness Equipment At Amazing Discounts!</p>
+              <a href="#" class="mt-auto">SHOP NOW <i class="fa fa-angle-right"></i></a>
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="./e-asset/shopmore3.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">KIDS WEARS & ACCESSORIES</h5>
+              <p class="card-text">Get All Kiddies Product At Huge Discount!.</p>
+              <a href="#" class="mt-auto">SHOP NOW <i class="fa fa-angle-right"></i></a>
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="./e-asset/shopmore4.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">TOP DEALS ON TELEVISIONS</h5>
+              <p class="card-text">Get the TV You Want With Bargain Deals!</p>
+              <a href="#" class="mt-auto">SHOP NOW <i class="fa fa-angle-right"></i></a>
+            </div>
+          </div>
+    </section>
 
     <script src="./commerce.js"></script>
     <script src="./all.js"></script>
