i make changes to my card container

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
     <section class="sec4">
         <div class="card">
             <img src="./e-asset/shopmore1.webp" class="card-img-top" alt="...">
-            <div class="card-body displa">
+            <div class="card-body">
               <h5 class="card-title">HOME FURNISHING</h5>
               <p class="card-text">Get Up To 70% Off</p>
               <a href="#" class="mt-auto">SHOP NOW <i class="fa fa-angle-right"></i></a>
