i make logo section

--- a/index.html
+++ b/index.html
@@ -511,8 +511,24 @@
           </div>
     </section>
 
+    <section class="w-100 p-3">
+        <div class="logoSec">
+            <div class="border p-3 border-top-0 border-start-0 border-1 " style="border-color:whitesmoke;"><img src="./e-asset/partner1.webp" alt=""></div>
+            <div class="border p-3 border-top-0 border-1 " style="border-color:whitesmoke;"><img src="./e-asset/partner2.webp" alt=""></div>
+            <div class="border p-3 border-top-0 border-1 " style="border-color:whitesmoke;"> <img src="./e-asset/partner3.webp" alt=""></div>
+            <div class="border p-3 border-top-0 border-1 " style="border-color:whitesmoke;"> <img src="./e-asset/partner4.webp" alt=""></div>
+            <div class="border p-3 border-top-0 border-1 " style="border-color:whitesmoke;"> <img src="./e-asset/partner5.webp" alt=""></div>
+            <div class="border p-3 border-top-0 border-1 border-end-0 " style="border-color:whitesmoke;"><img src="./e-asset/partner6.webp" alt=""></div>
+            <div class="border p-3 border-bottom-0 border-start-0 border-1 " style="border-color:whitesmoke;"><img src="./e-asset/partner7.webp" alt=""></div>
+            <div class="border p-3 border-bottom-0 border-1 " style="border-color:whitesmoke;"><img src="./e-asset/partner8.webp" alt=""></div>
+            <div class="border p-3 border-bottom-0 border-1 " style="border-color:whitesmoke;"><img src="./e-asset/partner10.webp" alt=""></div>
+            <div class="border p-3 border-bottom-0 border-1 " style="border-color:whitesmoke;"><img src="./e-asset/partner11.webp" alt=""></div>
+            <div class="border p-3 border-bottom-0 border-1 " style="border-color:whitesmoke;"><img src="./e-asset/partner12.webp" alt=""></div>
+            <div class="border p-3 border-bottom-0 border-1 border-end-0 " style="border-color:whitesmoke;"><img src="./e-asset/partner13.webp" alt=""></div>
+        </div>
+    </section>
     <script src="./commerce.js"></script>
     <script src="./all.js"></script>
     <script src="./bootstrap.bundle.js"></script>
 </body>
-</html
+</html>
