--- a/index.html
+++ b/index.html
@@ -513,19 +513,33 @@
 
     <section class="w-100 p-3">
         <div class="logoSec">
-            <div class="border p-3 border-top-0 border-start-0 border-1 " style="border-color:whitesmoke;"><img src="./e-asset/partner1.webp" alt=""></div>
-            <div class="border p-3 border-top-0 border-1 " style="border-color:whitesmoke;"><img src="./e-asset/partner2.webp" alt=""></div>
-            <div class="border p-3 border-top-0 border-1 " style="border-color:whitesmoke;"> <img src="./e-asset/partner3.webp" alt=""></div>
-            <div class="border p-3 border-top-0 border-1 " style="border-color:whitesmoke;"> <img src="./e-asset/partner4.webp" alt=""></div>
-            <div class="border p-3 border-top-0 border-1 " style="border-color:whitesmoke;"> <img src="./e-asset/partner5.webp" alt=""></div>
-            <div class="border p-3 border-top-0 border-1 border-end-0 " style="border-color:whitesmoke;"><img src="./e-asset/partner6.webp" alt=""></div>
-            <div class="border p-3 border-bottom-0 border-start-0 border-1 " style="border-color:whitesmoke;"><img src="./e-asset/partner7.webp" alt=""></div>
-            <div class="border p-3 border-bottom-0 border-1 " style="border-color:whitesmoke;"><img src="./e-asset/partner8.webp" alt=""></div>
-            <div class="border p-3 border-bottom-0 border-1 " style="border-color:whitesmoke;"><img src="./e-asset/partner10.webp" alt=""></div>
-            <div class="border p-3 border-bottom-0 border-1 " style="border-color:whitesmoke;"><img src="./e-asset/partner11.webp" alt=""></div>
-            <div class="border p-3 border-bottom-0 border-1 " style="border-color:whitesmoke;"><img src="./e-asset/partner12.webp" alt=""></div>
-            <div class="border p-3 border-bottom-0 border-1 border-end-0 " style="border-color:whitesmoke;"><img src="./e-asset/partner13.webp" alt=""></div>
+            <div class="border p-2 border-top-0 border-start-0 border-1 w-100" style="border-color:whitesmoke;"><img src="./e-asset/partner1.webp" alt=""></div>
+            <div class="border p-2 border-top-0 border-1 w-100" style="border-color:whitesmoke;"><img src="./e-asset/partner2.webp" alt=""></div>
+            <div class="border p-2 border-top-0 border-1 w-100" style="border-color:whitesmoke;"> <img src="./e-asset/partner3.webp" alt=""></div>
+            <div class="border p-2 border-top-0 border-1 w-100" style="border-color:whitesmoke;"> <img src="./e-asset/partner4.webp" alt=""></div>
+            <div class="border p-2 border-top-0 border-1 w-100" style="border-color:whitesmoke;"> <img src="./e-asset/partner5.webp" alt=""></div>
+            <div class="border p-2 border-top-0 border-1 border-end-0 w-100" style="border-color:whitesmoke;"><img src="./e-asset/partner6.webp" alt=""></div>
+            <div class="border p-2 border-bottom-0 border-start-0 border-1 w-100" style="border-color:whitesmoke;"><img src="./e-asset/partner7.webp" alt=""></div>
+            <div class="border p-2 border-bottom-0 border-1 w-100" style="border-color:whitesmoke;"><img src="./e-asset/partner8.webp" alt=""></div>
+            <div class="border p-2 border-bottom-0 border-1 w-100" style="border-color:whitesmoke;"><img src="./e-asset/partner10.webp" alt=""></div>
+            <div class="border p-2 border-bottom-0 border-1 w-100" style="border-color:whitesmoke;"><img src="./e-asset/partner11.webp" alt=""></div>
+            <div class="border p-2 border-bottom-0 border-1 w-100" style="border-color:whitesmoke;"><img src="./e-asset/partner12.webp" alt=""></div>
+            <div class="border p-2 border-bottom-0 border-1 border-end-0 w-100" style="border-color:whitesmoke;"><img src="./e-asset/partner13.webp" alt=""></div>
         </div>
+    </section>
+
+    <section class="kongaText">
+        <h3>Konga Online Shopping In NIgeria - Best Shopping Site</h3>
+    </section>
+
+    <section class="desktopFooter">
+        <nav>
+            <div>
+                <i class="fa bg-light rounded rounded-circle fa-mailbox"></i>
+                <p class="fw-bold">EMAIL SUPPORT</p>
+                <p>help@special.com</p>
+            </div>
+        </nav>
     </section>
     <script src="./commerce.js"></script>
     <script src="./all.js"></script>
