i added email support

--- a/index.html
+++ b/index.html
@@ -534,10 +534,36 @@
 
     <section class="desktopFooter">
         <nav>
-            <div>
-                <i class="fa bg-light rounded rounded-circle fa-mailbox"></i>
-                <p class="fw-bold">EMAIL SUPPORT</p>
-                <p>help@special.com</p>
+            <div class="d-flex gap-2 align-items-center">
+                <i class="fa bg-light rounded text-dark rounded-circle fa-inbox p-2"></i>
+                <div class="d-flex gap-0 flex-column align-items-center justify-content-center">
+                    <p class="fw-bold" style="margin: 0;">EMAIL SUPPORT</p>
+                    <p  style="margin: 0;">help@special.com</p>
+                </div>
+            </div>
+
+            <div class="d-flex gap-2 align-items-center">
+                <i class="fa bg-light rounded text-dark rounded-circle fa-phone p-2"></i>
+                <div class="d-flex gap-0 flex-column align-items-center justify-content-center">
+                    <p class="fw-bold" style="margin: 0;">PHONE SUPPORT</p>
+                    <p  style="margin: 0;">08101238416, 09012445611</p>
+                </div>
+            </div>
+
+            <div class="d-flex gap-2 align-items-center">
+                <i class="fa bg-light rounded text-dark rounded-circle fa-whatsapp  p-2"></i>
+                <div class="d-flex gap-0 flex-column align-items-center justify-content-center">
+                    <p class="fw-bold" style="margin: 0;">EMAIL SUPPORT</p>
+                    <p  style="margin: 0;">08101238416, 09012445611</p>
+                </div>
+            </div>
+
+            <div class="d-flex gap-2 align-items-center">
+                <i class="fa bg-light rounded text-dark rounded-circle fa-get-pocket  p-2"></i>
+                <div class="d-flex gap-0 flex-column align-items-center justify-content-center">
+                    <p class="fw-bold" style="margin: 0;">GET LATEST DETAILS</p></div>
+                    <p  style="margin: 0;">Best promotions sent to your inbox</p>
+                </div>
             </div>
         </nav>
     </section>
