i added email address input container

--- a/index.html
+++ b/index.html
@@ -533,10 +533,10 @@
     </section>
 
     <section class="desktopFooter">
-        <nav>
+        <nav class="navbar p-3">
             <div class="d-flex gap-2 align-items-center">
                 <i class="fa bg-light rounded text-dark rounded-circle fa-inbox p-2"></i>
-                <div class="d-flex gap-0 flex-column align-items-center justify-content-center">
+                <div class="d-flex gap-0 flex-column align-items-left justify-content-center">
                     <p class="fw-bold" style="margin: 0;">EMAIL SUPPORT</p>
                     <p  style="margin: 0;">help@special.com</p>
                 </div>
@@ -544,7 +544,7 @@
 
             <div class="d-flex gap-2 align-items-center">
                 <i class="fa bg-light rounded text-dark rounded-circle fa-phone p-2"></i>
-                <div class="d-flex gap-0 flex-column align-items-center justify-content-center">
+                <div class="d-flex gap-0 flex-column align-items-left justify-content-center">
                     <p class="fw-bold" style="margin: 0;">PHONE SUPPORT</p>
                     <p  style="margin: 0;">08101238416, 09012445611</p>
                 </div>
@@ -552,19 +552,28 @@
 
             <div class="d-flex gap-2 align-items-center">
                 <i class="fa bg-light rounded text-dark rounded-circle fa-whatsapp  p-2"></i>
-                <div class="d-flex gap-0 flex-column align-items-center justify-content-center">
-                    <p class="fw-bold" style="margin: 0;">EMAIL SUPPORT</p>
+                <div class="d-flex  gap-0 flex-column align-items-left justify-content-start">
+                    <p class="fw-bold" style="margin: 0;">WHATSAPP</p>
                     <p  style="margin: 0;">08101238416, 09012445611</p>
                 </div>
             </div>
 
             <div class="d-flex gap-2 align-items-center">
-                <i class="fa bg-light rounded text-dark rounded-circle fa-get-pocket  p-2"></i>
-                <div class="d-flex gap-0 flex-column align-items-center justify-content-center">
-                    <p class="fw-bold" style="margin: 0;">GET LATEST DETAILS</p></div>
-                    <p  style="margin: 0;">Best promotions sent to your inbox</p>
+                <i class="fa bg-light rounded text-dark rounded-circle fa-inbox p-2"></i>
+                <div class="d-flex gap-0 flex-column align-items-left justify-content-center">
+                    <p class="fw-bold" style="margin: 0;">GET LATEST DEALS</p>
+                    <p  style="margin: 0;">Best Promotion sent to your inbox</p>
                 </div>
             </div>
+
+            <div class="d-flex searchCon">
+                <div class=" rounded-start bg-light p-2">
+                    <input type="text" placeholder="Email Address..." class="border-0 bg-transparent w-100">
+                </div>
+                <button class=" rounded-end fw-bold " style="background-color: rgb(72, 16, 156);">Subscribe</button>
+            </div>
+
+            
         </nav>
     </section>
     <script src="./commerce.js"></script>
