i added footer item

--- a/index.html
+++ b/index.html
@@ -532,8 +532,8 @@
         <h3>Konga Online Shopping In NIgeria - Best Shopping Site</h3>
     </section>
 
-    <section class="desktopFooter">
-        <nav class="navbar p-3">
+    <section class="">
+        <nav class="desktopFooterNav navbar p-3">
             <div class="d-flex gap-2 align-items-center">
                 <i class="fa bg-light rounded text-dark rounded-circle fa-inbox p-2"></i>
                 <div class="d-flex gap-0 flex-column align-items-left justify-content-center">
@@ -572,9 +572,67 @@
                 </div>
                 <button class=" rounded-end fw-bold " style="background-color: rgb(72, 16, 156);">Subscribe</button>
             </div>
-
             
         </nav>
+
+        <div class="desktopFooter">
+            <div class="d-flex gap-5">
+                <div class="eachFooterContainer">
+                    <p class="fw-bold">ABOUT SPECIAL</p>
+                    <div class="footerList">
+                        <p>Contact Us</p>
+                        <p>About Us</p>
+                        <p>Careers</p>
+                        <p>Our Blog</p>
+                        <p>Forum</p>
+                        <p>Terms and Conditions</p>
+                    </div>
+                </div>
+
+                <div class="eachFooterContainer">
+                    <p class="fw-bold">PAYMENT</p>
+                    <div class="footerList">
+                        <p>SpecialPay</p>
+                        <p>Wallet</p>
+                        <p>Verve</p>
+                        <p>Mastercard</p>
+                        <p>Visa</p>
+                    </div>
+                </div>
+
+                <div class="eachFooterContainer">
+                    <p class="fw-bold">BUYING ON SPECIAL</p>
+                    <div class="footerList">
+                        <p>Buyer Safely Centre</p>
+                        <p>FAQs</p>
+                        <p>Delivery</p>
+                        <p>Special Return Policy</p>
+                        <p>Digital Services</p>
+                        <p>Bulk Purchase</p>
+                    </div>
+                </div>
+
+                <div class="eachFooterContainer">
+                    <p class="fw-bold">MORE INFO</p>
+                    <div class="footerList">
+                        <p>Site Map</p>
+                        <p>Track My Order</p>
+                        <p>Privacy Policy</p>
+                        <p>Authentic Items Policy</p>
+                    </div>
+                </div>
+
+                <div class="eachFooterContainer">
+                    <p class="fw-bold">ABOUT SPECIAL</p>
+                    <div class="footerList">
+                        <p>Become a Konga Affiliate</p>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="downloadSection"></div>
+        </div>
     </section>
     <script src="./commerce.js"></script>
     <script src="./all.js"></script>
