added playstore images

--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
             
         </nav>
 
-        <div class="desktopFooter">
+        <div class="desktopFooter ">
             <div class="d-flex gap-5">
                 <div class="eachFooterContainer">
                     <p class="fw-bold">ABOUT SPECIAL</p>
@@ -631,7 +631,25 @@
 
             </div>
 
-            <div class="downloadSection"></div>
+            <div class="downloadSection gap-5 align-items-start">
+                <div>
+                    <p style="font-weight: 500;">DOWNLOAD AND CONNECT WITH US</p>
+                    <div class="downloadImg d-flex gap-3">
+                        <img src="./e-asset/app store.png" alt="">
+                        <img src="./e-asset/google play.png" alt="">
+                    </div>
+                </div>
+                <div class="">
+                    <p style="font-weight: 500;">CONNECT WITH US</p>
+                    <div class="d-flex browser-btn">
+                        <button><i class="fab fa-facebook"></i></button>
+                        <button><i class="fab fa-twitter"></i></button>
+                        <button><i class="fab fa-instagram"></i></button>
+                        <button><i class="fab fa-youtube"></i></button>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </section>
     <script src="./commerce.js"></script>
