--- a/index.html
+++ b/index.html
@@ -488,10 +488,11 @@
  
 
     <section class="kongaText">
-        <h3>Konga Online Shopping In NIgeria - Best Shopping Site</h3>
+        <h4>Konga Online Shopping In NIgeria - Best Shopping Site</h4>
+        <p>Konga.com is Nigeria’s number one online Shopping destination.We pride ourselves in having everything you could possibly need for life and living at the best prices than anywhere else. Our access to Original Equipment Manufacturers and premium sellers gives us a wide range of products at very low prices. Some of our popular categories include electronics, mobile phones, computers, fashion, beauty products, home and kitchen, Building and construction materials and a whole lot more from premium brands. Some of our other categories include Food and drinks, automotive and industrial, books, musical equipment, babies and kids items, sports and fitness, to mention a few. To make your shopping experience swift and memorable, there are also added services like gift vouchers, consumer promotion activities across different categories and bulk purchases with hassle-free delivery. Enjoy free shipping rates for certain products and with the bulk purchase option, you can enjoy low shipping rates, discounted prices and flexible payment. When you shop on our platform, you can pay with your debit card or via KongaPay, which is a convenient and secured payment solution. Get the best of lifestyle services online. Don't miss out on the biggest sales online which takes place on special dates yearly.</p>
     </section>
 
-    <section class="">
+    <section class="alldesktopfooter">
         <nav class="desktopFooterNav navbar p-3">
             <div class="d-flex gap-2 align-items-center">
                 <i class="fa bg-light rounded text-dark rounded-circle fa-inbox p-2"></i>
