--- a/index.html
+++ b/index.html
@@ -613,6 +613,24 @@
             </div>
         </div>
     </section>
+    <footer class="navbar resFooter">
+        <button>
+            <i class="fa fa-home"></i>
+            <label for="">Home</label>
+        </button>
+        <button>
+            <i class="fa fa-tag"></i>
+            <label for="">Deals</label>
+        </button>
+        <button>
+            <i class="fa fa-shopping-cart"></i>
+            <label for="">Cart</label>
+        </button>
+        <button>
+            <i class="fa fa-bars"></i>
+            <label for="">More</label>
+        </button>
+    </footer>
     <script src="./commerce.js"></script>
     <script src="./all.js"></script>
     <script src="./bootstrap.bundle.js"></script>
