added some features

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
             </div>
 
             <div class="d-flex gap-2 align-items-center">
-                <i class="fab fa-whatsapp"></i>
+                <!-- <i class="fab fa-whatsapp"></i> -->
                 <i class="fab  bg-light rounded text-dark rounded-circle fa-whatsapp  p-2"></i>
                 <div class="d-flex  gap-0 flex-column align-items-left justify-content-start">
                     <p class="fw-bold" style="margin: 0;">WHATSAPP</p>
@@ -613,6 +613,7 @@
             </div>
         </div>
     </section>
+    <div style="height: 70px;"></div>
     <footer class="navbar resFooter">
         <button>
             <i class="fa fa-home"></i>
