--- a/index.html
+++ b/index.html
@@ -34,11 +34,27 @@
         </nav>
         <div id="myNav" class="overlay">
             <div class="overlay-content">
-                <div ></div>
-                <a href="#">About</a>
-                <a href="#">Services</a>
-                <a href="#">Clients</a>
-                <a href="#">Contact</a>
+                <div style="height: 28px;"></div>
+                <div class="d-flex loginOut">
+                    <button>Login</button>
+                    <button>Signup</button>
+                </div>
+                <div class="fourpart">
+                    <div class="d-flex align-items-center gap-2 ">
+                        <i class="fa fa-location-dot"></i>
+                        <div class="text-start" style="margin:0; height: 40px;">
+                            <p style="margin:0;">Track Orders</p>
+                            <p style="margin-top:0px; font-size: 10px;">View order status</p>
+                        </div>
+                    </div>
+
+                    <div class="d-flex align-items-center gap-2 ">
+                        <i class="fa fa-star"></i>
+                        <div class="text-start" style="margin:0; ">
+                            <p style="margin:0;">Pending Items</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
