--- a/index.html
+++ b/index.html
@@ -40,18 +40,34 @@
                     <button>Signup</button>
                 </div>
                 <div class="fourpart">
-                    <div class="d-flex align-items-center gap-2 ">
+                    <div class="d-flex align-items-center gap-3 py-1 px-3" style="border-right: 1px  solid rgb(219, 216, 216);">
                         <i class="fa fa-location-dot"></i>
                         <div class="text-start" style="margin:0; height: 40px;">
-                            <p style="margin:0;">Track Orders</p>
-                            <p style="margin-top:0px; font-size: 10px;">View order status</p>
+                            <p style="margin:0; font-size: 13px;">Track Orders</p>
+                            <p style="margin-top:0px; color: gray; font-size: 10px;">View order status</p>
                         </div>
                     </div>
 
-                    <div class="d-flex align-items-center gap-2 ">
+                    <div class="d-flex align-items-center gap-3 py-1 px-3">
                         <i class="fa fa-star"></i>
                         <div class="text-start" style="margin:0; ">
-                            <p style="margin:0;">Pending Items</p>
+                            <p style="margin:0; font-size: 13px;">Pending Items</p>
+                        </div>
+                    </div>
+
+                    <div class="d-flex align-items-center py-1 px-3 gap-3" style="border-top: 1px  solid rgb(219, 216, 216); border-right: 1px  solid rgb(219, 216, 216);">
+                        <i class="fa fa-tag"></i>
+                        <div class="text-start" style="margin:0; height: 40px;">
+                            <p style="margin:0; font-size: 13px;">Track Orders</p>
+                            <p style="margin-top:0px; color: gray; font-size: 10px;">View order status</p>
+                        </div>
+                    </div>
+
+                    <div class="d-flex align-items-center gap-3 py-1 px-3" style="border-top: 1px  solid rgb(219, 216, 216);">
+                        <i class="fa fa-home"></i>
+                        <div class="text-start" style="margin:0; height: 40px;">
+                            <p style="margin:0; font-size: 13px;">Track Orders</p>
+                            <p style="margin-top:0px; color: gray; font-size: 10px;">View order status</p>
                         </div>
                     </div>
                 </div>
