Done with offcanvas content

--- a/index.html
+++ b/index.html
@@ -106,12 +106,13 @@
                         <i class="fa fa-angle-right"></i>
                     </div>
                     <div>
-                        <span class="d-flex gap-2 w-50">
-                            <i class="fa fa-phone"></i>
+                        <span class="d-flex align-items-center gap-2 w-50">
+                            <i class="fa fa-phone" style="font-size:12px;"></i>
                             <p>Contact Us</p>
                         </span>
                         <span></span>
                     </div>
+                    <div style="height: 150px;"></div>
                 </div>
             </div>
         </div>
