--- a/mega.html
+++ b/mega.html
@@ -5,25 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="bootstrap.css">
     <title>Document</title>
 </head>
 <body>
   
   
-  <div id="myNav" class="overlay">
-    
-    <div class="overlay-content">
-      <h1>lorem</h1>
-      <a href="#">About</a>
-      <a href="#">Services</a>
-      <a href="#">Clients</a>
-      <a href="#">Contact</a>
-    </div>
-  </div>
-  <div style="position: fixed; height: 50px;   z-index: 10; background-color: red; width: 100%;">
-    <button style="font-size:30px;cursor:pointer; transition: 0.5s; margin: 0; z-index: 10;" id="openicon" onclick="openNav()">&#9776;</button>
-    <button style="font-size:30px;cursor:pointer; " class="closebtn" id="closeicon"  onclick="closeNav()">&times</button>
-  
+  <div class="meganavbar">
+    <a href="#home">Home</a>
+    <a href="#news">News</a>
+    <div class="megadropdown">
+      <button class="dropbtn">Dropdown 
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <div class="header">
+          <h2>Mega Menu</h2>
+        </div>   
+        <div class="row">
+          <div class="column">
+            <h3>Category 1</h3>
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+          </div>
+          <div class="column">
+            <h3>Category 2</h3>
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+          </div>
+          <div class="column">
+            <h3>Category 3</h3>
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+          </div>
+        </div>
+      </div>
+    </div> 
   </div>
   
   <script src="./commerce.js"></script>
