I make right offcanvas

--- a/index.html
+++ b/index.html
@@ -205,7 +205,18 @@
                     style="background-color:rgb(88, 45, 153) ;"><i class="fa fa-question"></i></button>
                 <span>Help <i class="fa fa-angle-down"></i></span>
             </div>
-            <p>Login/Signup</p>
+            <div>
+                <p class="loginBtn" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"aria-controls="offcanvasRight">Login/Signup</p>
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                    <div class="offcanvas-header">
+                        <h5 id="offcanvasRightLabel">Offcanvas right</h5>
+                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        ...
+                    </div>
+                </div>
+            </div>
             <div class="bg-success d-flex align-items-center gap-3 ppy-1 px-3 rounded justify-content-center">
                 <div class="d-flex align-items-center gap-2">
                     <i class="fa fa-shopping-cart"></i>
@@ -217,6 +228,9 @@
     
   
         <nav class="meganavbar thisNav ">
+
+            
+
             <div class="megadropdown">
               <div class=" dropNavContent"><b>All categories <i class="fa fa-bars"></i></b></div>
               <div class="dropdown-content">
