i did right offcanvas heade and close button

--- a/index.html
+++ b/index.html
@@ -207,12 +207,16 @@
             </div>
             <div>
                 <p class="loginBtn" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"aria-controls="offcanvasRight">Login/Signup</p>
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-                    <div class="offcanvas-header">
-                        <h5 id="offcanvasRightLabel">Offcanvas right</h5>
-                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                <div class="offcanvas offcanvas-end" style="width:37%; color: black;" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                    <div class="offcanvas-header shadow-sm " style="height: 70px;">
+                        <h4 id="offcanvasRightLabel" class="text-dark fw-bold">Login</h4>
+                        <button type="button" class="closeoff text-reset" data-bs-dismiss="offcanvas" aria-label="Close">
+                            <i class="fa fa-times"></i> 
+                            <span>Close</span>
+                        </button>
                     </div>
-                    <div class="offcanvas-body">
+                    <div class="offcanvas-body p-4 mt-4">
+                        <label for="" class="emaillabel"></label>
                         ...
                     </div>
                 </div>
