i did mega menu drop down

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                         </button>
                     </div>
                     <div class="offcanvas-body p-4 mt-4">
-                        <label for="" class="emaillabel"></label>
+                        <label for="" class="emaillabel">Email Address or Phone Number</label>
                         ...
                     </div>
                 </div>
