--- a/index.html
+++ b/index.html
@@ -215,9 +215,16 @@
                             <span>Close</span>
                         </button>
                     </div>
-                    <div class="offcanvas-body p-4 mt-4">
-                        <label for="" class="emaillabel">Email Address or Phone Number</label>
-                        ...
+                    <div class="offcanvas-body p-3 mt-2">
+                        <p class="emaillabel my-2">Email Address or Phone Number</p>
+                        <input type="text" class="w-100 emailInput" placeholder="Enter Email Address OR Phone Number">
+
+                        <p class="emaillabel  navbar mt-4"><span>Password</span><a href="#">Forgot Password?</a></p>
+                        <div class="w-100">
+                            <input type="text" class="w-100 emailInput position-relative" placeholder="Enter Email Address OR Phone Number">
+                            <p class="position-absolute " style="z-index: 2; ">Show</p>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
