--- a/index.html
+++ b/index.html
@@ -219,12 +219,15 @@
                         <p class="emaillabel my-2">Email Address or Phone Number</p>
                         <input type="text" class="w-100 emailInput" placeholder="Enter Email Address OR Phone Number">
 
-                        <p class="emaillabel  navbar mt-4"><span>Password</span><a href="#">Forgot Password?</a></p>
-                        <div class="w-100">
-                            <input type="text" class="w-100 emailInput position-relative" placeholder="Enter Email Address OR Phone Number">
-                            <p class="position-absolute " style="z-index: 2; ">Show</p>
+                        <p class="emaillabel  navbar mt-4"><span>Password</span><a href="#" style="color:brown;">Forgot Password?</a></p>
+                        <div class="w-100 position-relative">
+                            <input type="text" class="w-100 emailInput " placeholder="Enter Email Address OR Phone Number">
+                            <p class="position-absolute " style="z-index: 2; right: 18px; bottom: 14px; color: rgb(173, 170, 170); font-size: 12px;">Show</p>
                         </div>
-                        
+                        <button class="btn btn-success w-100 mt-4 opacity-75 rounded-1"><b>Login</b></button>
+                        <div class="straightLine mt-5">
+                            <p class="rounded rounded-circle">OR</p>
+                        </div>
                     </div>
                 </div>
             </div>
