i did login with google btn

--- a/index.html
+++ b/index.html
@@ -228,6 +228,10 @@
                         <div class="straightLine mt-5">
                             <p class="rounded rounded-circle">OR</p>
                         </div>
+                        <button class="btn d-flex p-2 gap-2 align-items-center justify-content-center btn-light border-primary w-100 my-4 text-primary rounded-1">
+                            <p style="font-size: 12px;">Login with</p>
+                            <img src="./e-asset/google logo.png" alt="" style="width: 50px;">
+                        </button>
                     </div>
                 </div>
             </div>
