--- a/index.html
+++ b/index.html
@@ -228,14 +228,17 @@
                         <div class="straightLine mt-5">
                             <p class="rounded rounded-circle">OR</p>
                         </div>
-                        <button class="btn d-flex p-2 gap-2 align-items-center justify-content-center btn-light border-primary w-100 my-4 text-primary rounded-1">
+                        <button class="border-1 border d-flex p-2 gap-2 align-items-center justify-content-center bg-white border-primary w-100 my-4 text-primary rounded-1">
                             <p style="font-size: 12px;">Login with</p>
                             <img src="./e-asset/google logo.png" alt="" style="width: 50px;">
                         </button>
                     </div>
+                    <footer class="offcanvas-footer text-center p-3 shadow shadow-lg w-100">
+                        <a href="" style="color:brown; font-weight:600; font-size: 16px; text-decoration: none;">Don't have an account? Signup</a>
+                    </footer>
                 </div>
             </div>
-            <div class="bg-success d-flex align-items-center gap-3 ppy-1 px-3 rounded justify-content-center">
+            <div class="bg-success d-flex align-items-center gap-3 py-1 px-3 rounded justify-content-center">
                 <div class="d-flex align-items-center gap-2">
                     <i class="fa fa-shopping-cart"></i>
                     <p>My <br>Cart</p>
