i did help dropdown

--- a/index.html
+++ b/index.html
@@ -203,7 +203,15 @@
             <div>
                 <button class="rounded rounded-circle py-1 px-2 border-0 text-light"
                     style="background-color:rgb(88, 45, 153) ;"><i class="fa fa-question"></i></button>
-                <span>Help <i class="fa fa-angle-down"></i></span>
+                <div class="dropdown">
+                    <button class="dropbtn">Help <i class="fa fa-angle-down"></i></button>
+                    <div class="dropdown-content2">
+                      <a href="#">FAQs</a>
+                      <a href="#">Contact Us</a>
+                      <a href="#">Track My Order</a>
+                    </div>
+                  </div>
+                  
             </div>
             <div>
                 <p class="loginBtn" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"aria-controls="offcanvasRight">Login/Signup</p>
