i created signup container and header

--- a/signUp.html
+++ b/signUp.html
@@ -9,10 +9,43 @@
     <link rel="stylesheet" href="./bootstrap.css">
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-    
+<body class="signUpBody">
+    <section>
+        <img src="" alt="" class="signupLogo">
+        <div class="signupContainer">
+            <h2><b>Create An Account</b></h2>
+            <hr>
+            <div class="eachForm">
+                <label for="">First Name</label>
+                <input type="text" placeholder="Enter">
+            </div>
 
+            <div class="eachForm">
+                <label for="">First Name</label>
+                <input type="text" placeholder="Enter">
+            </div>
 
+            <div class="eachForm">
+                <label for="">First Name</label>
+                <input type="text" placeholder="Enter">
+            </div>
+
+            <div class="eachForm">
+                <label for="">First Name</label>
+                <input type="text" placeholder="Enter">
+            </div>
+
+            <div class="eachForm">
+                <label for="">First Name</label>
+                <input type="text" placeholder="Enter">
+            </div>
+
+            <div class="eachForm">
+                <label for="">First Name</label>
+                <input type="text" placeholder="Enter">
+            </div>
+        </div>
+    </section>
     <script src="./commerce.js"></script>
     <script src="./all.js"></script>
     <script src="./bootstrap.bundle.js"></script>
