--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                         </button>
                     </div>
                     <footer class="offcanvas-footer text-center p-3 shadow shadow-lg w-100">
-                        <a href="" style="color:brown; font-weight:600; font-size: 16px; text-decoration: none;">Don't have an account? Signup</a>
+                        <a href="signUp.html" style="color:brown; font-weight:600; font-size: 16px; text-decoration: none;">Don't have an account? Signup</a>
                     </footer>
                 </div>
             </div>
