--- a/signUp.html
+++ b/signUp.html
@@ -17,27 +17,27 @@
             <hr>
             <div class="eachForm">
                 <label for="">First Name</label>
-                <input type="text" placeholder="Enter">
+                <input type="text" placeholder="Enter First Name">
             </div>
 
             <div class="eachForm">
-                <label for="">First Name</label>
-                <input type="text" placeholder="Enter">
+                <label for="">Last Name</label>
+                <input type="text" placeholder="Enter Last Name">
             </div>
 
             <div class="eachForm">
-                <label for="">First Name</label>
-                <input type="text" placeholder="Enter">
+                <label for="">Email Address</label>
+                <input type="text" placeholder="Enter Email Address">
             </div>
 
             <div class="eachForm">
-                <label for="">First Name</label>
-                <input type="text" placeholder="Enter">
+                <label for=""> Phone Number</label>
+                <input type="text" placeholder="Enter Phone Number">
             </div>
 
             <div class="eachForm">
-                <label for="">First Name</label>
-                <input type="text" placeholder="Enter">
+                <label for="Password"></label>
+                <input type="text" placeholder="Enter Password">
             </div>
 
             <div class="eachForm">
