i type terms and condition link

--- a/signUp.html
+++ b/signUp.html
@@ -36,13 +36,18 @@
             </div>
 
             <div class="eachForm">
-                <label for="Password"></label>
+                <label for="">Password</label>
                 <input type="text" placeholder="Enter Password">
             </div>
 
             <div class="eachForm">
-                <label for="">First Name</label>
-                <input type="text" placeholder="Enter">
+                <button class="btn btn-success w-100 opacity-75 rounded-1"><b>Create An Account</b></button>
+            </div>
+            <div class="eachForm">
+                <p style="color: rgb(195, 195, 195); font-size: 13px; margin: 0; text-align: center; padding:0 20px;">
+                    By signing up you accept our <a href="" style="color: rgb(195, 195, 195);">terms and conditions
+                    & privacy policy</a>
+                </p>
             </div>
         </div>
     </section>
