i added login instead btn

--- a/signUp.html
+++ b/signUp.html
@@ -49,6 +49,15 @@
                     & privacy policy</a>
                 </p>
             </div>
+
+            <div class="eachForm">
+                <p style="color: rgb(141, 141, 141); font-size: 13px; text-align: center; padding:0 20px;">
+                    Already have an Account?
+                </p>
+                <button class="loginInstead">
+                    Login
+                </button>
+            </div>
         </div>
     </section>
     <script src="./commerce.js"></script>
