--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <div class="overlay-content">
                 <div style="height: 28px;"></div>
                 <div class="d-flex loginOut">
-                    <button>Login</button>
-                    <button>Signup</button>
+                    <button onclick="goLogin()">Login</button>
+                    <button onclick="goSignup()">Signup</button>
                 </div>
                 <div class="w-100" style="padding:0 10px; border-bottom: 3px  solid rgb(219, 216, 216);">
                     <div class="fourpart">
