--- a/signUp.html
+++ b/signUp.html
@@ -17,31 +17,31 @@
             <hr>
             <div class="eachForm">
                 <label for="">First Name</label>
-                <input type="text" placeholder="Enter First Name">
+                <input type="text" placeholder="Enter First Name" id="fName">
             </div>
 
             <div class="eachForm">
                 <label for="">Last Name</label>
-                <input type="text" placeholder="Enter Last Name">
+                <input type="text" placeholder="Enter Last Name" id="lName">
             </div>
 
             <div class="eachForm">
                 <label for="">Email Address</label>
-                <input type="text" placeholder="Enter Email Address">
+                <input type="text" placeholder="Enter Email Address" id="eAddress">
             </div>
 
             <div class="eachForm">
                 <label for=""> Phone Number</label>
-                <input type="text" placeholder="Enter Phone Number">
+                <input type="text" placeholder="Enter Phone Number" id="pNumber">
             </div>
 
             <div class="eachForm">
                 <label for="">Password</label>
-                <input type="text" placeholder="Enter Password">
+                <input type="text" placeholder="Enter Password" id="password">
             </div>
 
             <div class="eachForm">
-                <button class="btn btn-success w-100 opacity-75 rounded-1"><b>Create An Account</b></button>
+                <button class="btn btn-success w-100 opacity-75 rounded-1" onclick="createAnAccount()"><b>Create An Account</b></button>
             </div>
             <div class="eachForm">
                 <p style="color: rgb(195, 195, 195); font-size: 13px; margin: 0; text-align: center; padding:0 20px;">
