i make changes to input

--- a/signUp.html
+++ b/signUp.html
@@ -27,17 +27,17 @@
 
             <div class="eachForm">
                 <label for="">Email Address</label>
-                <input type="text" placeholder="Enter Email Address" id="eAddress">
+                <input type="email" placeholder="Enter Email Address" id="eAddress">
             </div>
 
             <div class="eachForm">
                 <label for=""> Phone Number</label>
-                <input type="text" placeholder="Enter Phone Number" id="pNumber">
+                <input type="tel" maxlength="11" placeholder="Enter Phone Number" id="pNumber">
             </div>
 
             <div class="eachForm">
                 <label for="">Password</label>
-                <input type="text" placeholder="Enter Password" id="password">
+                <input type="password" placeholder="Enter Password" id="password">
             </div>
 
             <div class="eachForm">
