i link signup to login

--- a/signUp.html
+++ b/signUp.html
@@ -54,7 +54,7 @@
                 <p style="color: rgb(141, 141, 141); font-size: 13px; text-align: center; padding:0 20px;">
                     Already have an Account?
                 </p>
-                <button class="loginInstead">
+                <button class="loginInstead" onclick="goLogin()">
                     Login
                 </button>
             </div>
