--- a/logIn.html
+++ b/logIn.html
@@ -15,6 +15,8 @@
 <body class="signUpBody">
     <section>
         <div class="signupContainer mt-4 position-relative p-3" style="height:93vh">
+            <h2><b>Create An Account</b></h2>
+            <hr>
             <p class="emaillabel mt-4 my-2">Email Address or Phone Number</p>
             <input type="text" class="w-100 emailInput" placeholder="Enter Email Address OR Phone Number">
 
@@ -34,9 +36,9 @@
                 <p style="font-size: 12px; margin:0;">Login with</p>
                 <img src="./e-asset/google logo.png" alt="" style="width: 50px;">
             </button>
-            <footer class="footer position-absolute bottom-0 text-center py-3 start-0 shadow shadow-lg w-100">
-                <a href="signUp.html" style="color:brown; font-weight:600; font-size: 16px; text-decoration: none;">Don't have an account? Signup</a>
-            </footer>
+                <footer class="footer position-absolute bottom-0 text-center py-3 start-0 shadow shadow-lg w-100">
+                    <a href="signUp.html" style="color:brown; font-weight:600; font-size: 16px; text-decoration: none;">Don't have an account? Signup</a>
+                </footer>
         </div>
     </section>
 
