i added function login account

--- a/logIn.html
+++ b/logIn.html
@@ -18,7 +18,7 @@
             <h2><b>Create An Account</b></h2>
             <hr>
             <p class="emaillabel mt-4 my-2">Email Address or Phone Number</p>
-            <input type="text" class="w-100 emailInput" placeholder="Enter Email Address OR Phone Number">
+            <input type="email" class="w-100 emailInput" id="inEmail" placeholder="Enter Email Address OR Phone Number">
 
             <p class="emaillabel  navbar mt-4"><span>Password</span><a href="#" style="color:brown;">Forgot
                     Password?</a></p>
@@ -28,7 +28,7 @@
                     Show
                 </p>
             </div>
-            <button class="btn btn-success w-100 mt-4 opacity-75 rounded-1"><b>Login</b></button>
+            <button class="btn btn-success w-100 mt-4 opacity-75 rounded-1" onclick="loginAccount()"><b>Login</b></button>
             <div class="straightLine mt-5">
                 <p class="rounded rounded-circle">OR</p>
             </div>
