i added cart.html

--- a/index.html
+++ b/index.html
@@ -147,14 +147,14 @@
     </section>
     
     <section style="top: -400px;" class="navSection" id="navSection">
-        <header class="nav-header position-relative" id="navHeader">
+        <!-- <header class="nav-header position-relative" id="navHeader">
             <h3>Free Delivery <span class="fw-light">On Orders From </span>₦4,599 & Above</h3>
             <button class="btn px-4 py-0 btn-warning rounded rounded-5 text-dark">Shop Now 
                 <i class="fa fa-angle-right"></i>
             </button>
             <p>Location: <span class="fw-bold">Lagos, Abuja, Port Harcourt</span></p>
             <i onclick="cancelHeader()" class="position-absolute fa fa-times btn btn-light" style="color:rgb(72, 16, 156) ; right:10px; top: 10px;"></i>
-        </header>
+        </header> -->
         <div class="d-flex justify-content-center gap-5 p-2 bg-light">
             <p class="headerIcon ">
                 <i class="fa fa-box text-warning"></i>
